# reranker-server

./: .gitignore  DOCUMENTATION.md  README.md  main.py  reranker.proto
.github/workflows/: build.yml  publish.yml
model/: export_model.sh  pyproject.toml
scripts/: compile_protos.sh
sdk/: README.md  pyproject.toml
sdk/examples/: async_example.py  basic_example.py
sdk/re_client/: __init__.py  client.py  config.py  exceptions.py  models.py  reranker_pb2_grpc.py  utils.py
server/: Dockerfile  README.md  __main__.py  client.py  compile_protos.sh  pyproject.toml  reranker_pb2.py
server/model/: README.md  export_model.sh  pyproject.toml
server/scripts/: build.sh  run.sh
server/src/: logger.py  reranker_pb2.py  reranker_pb2.pyi  reranker_pb2_grpc.py  server.py  test_server.py
server/src/worker/: inference.py
